--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="header">
                 <div class="header__buttons">
                     <a href="#" class="header__button"><img src="./images/play.png" alt="" class="block1__image">Run</a>
+                    <a href="#" class="header__button"><img src="./images/plus.png" alt="" class="block1__image">Добавить</a>
                 </div>
             </div>
             <div class="cards">
@@ -66,7 +67,6 @@
                     <p class="card__name">База данных</p>
                     <a href="" class="card__button"><img src="./images/edit.png" alt="" class="card__buttton-image"></a>
                 </div>
-
             </div>
         </div>
     </div>
