--- a/submit/website_submit.html
+++ b/submit/website_submit.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="file.css">
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../submit.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,23 +28,10 @@
                 </div>
             </div>
             <div class="content">
-                <form id="fileUploadForm" action="" method="post" class="form" enctype="multipart/form-data">
-                    <label for="fileInput" class="file-label">
-                        Выберите файлы
-                        <input 
-                            type="file" 
-                            id="fileInput" 
-                            name="files[]" 
-                            accept=".pdf,.txt,.docx,.doc,.csv,.xlsx,.xls,.json" 
-                            multiple 
-                            required>
-                    </label>
-                    <p class="file-types">
-                        Поддерживаемые типы: PDF, TXT, DOCX, DOC, CSV, XLSX, XLS, JSON
-                    </p>
-                    <button type="submit" class="submit-btn">Загрузить</button>
-                    <p id="message" class="message"></p>
-                </form>
+                <div class="content-block">
+                    <p class="content__text">Ваш интернет ресурс усешно подключен!</p>
+                    <a href="/uploads/" class="content__link">вернуться к загрузкам</a>
+                </div>
             </div>
         </div>
     </div>
